--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>SmartFactoryProject1</display-name>
+  
+  <resource-ref>
+  <description>HANADB Resource</description><!-- 리소스 설명 -->
+  <res-ref-name>jdbc/SAPABAP1</res-ref-name><!-- 리소스 이름(JNDI명) -->
+  <res-type>javax.sql.DataSource</res-type><!-- 리턴 Type -->
+  <res-auth>Container</res-auth><!-- 관리 계층 -->
+</resource-ref>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
